# osci-cli

./: .gitignore  .travis.yml  Cargo.toml  LICENSE
snap/: snapcraft.yaml
src/: config.rs  gerrit.rs  lib.rs  main.rs
