[package]
authors = ["Chris MacNaughton <chris.macnaughton@canonical.com>"]
edition = "2018"
name = "osci-cli"
version = "0.1.0"
license = "MIT"

[dependencies]
env_logger = "*"
failure = "^0.1"
log = "^0.4"
nom = "^5.0"
toml = "^0.5"
xdg = "^2.1"

[dependencies.jenkins_api]
# git = "https://github.com/mockersf/jenkins-api.rs"
git = "https://github.com/ChrisMacNaughton/jenkins-api.rs"
branch = "feature/public-fields"
# path = "../jenkins-api.rs"

[dependencies.serde]
features = ["derive"]
version = "^1.0"

[dependencies.simple_logger]
default-features = false
version = "^1.3"

[dependencies.structopt]
default-features = false
features = ["suggestions"]
version = "^0.3"
